# geoserver-mcp

./: .dockerignore  .editorconfig  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  docker-compose.yml  pyproject.toml
.codex/skills/geoserver-mcp-usage/: SKILL.md
.codex/skills/geoserver-mcp-usage/agents/: openai.yaml
.codex/skills/geoserver-mcp-usage/references/: domain-model.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  publish-pypi.yml
deploy/: .env.example  Dockerfile  README.md  docker-compose.yml
deploy/1panel/open-geoserver-mcp/: README.md  README_en.md  data.yml
deploy/1panel/open-geoserver-mcp/1.0.2/: docker-compose.yml
deploy/1panel/open-geoserver-mcp/1.0.3/: docker-compose.yml
deploy/1panel/open-geoserver-mcp/1.0.3/scripts/: init.sh
deploy/1panel/open-geoserver-mcp/1.0.4/: data.yml  docker-compose.yml
deploy/1panel/open-geoserver-mcp/1.0.5/: docker-compose.yml
deploy/1panel/open-geoserver-mcp/1.0.6/: docker-compose.yml
deploy/1panel/open-geoserver-mcp/1.0.7/: docker-compose.yml
deploy/1panel/open-geoserver-mcp/1.0.8/: docker-compose.yml
deploy/1panel/open-geoserver-mcp/1.0.9/: data.yml  docker-compose.yml
docs/: README.md  README.zh-CN.md  mcp-so-submission.en.md  mcp-so-submission.zh.md
docs/deployment/: docker-and-1panel.md
docs/development/: local-development.md
docs/getting-started/: client-configuration.md  installation.md
docs/internal/: mcp-so-submission.zh.md
docs/maintainers/: release-and-versioning.md
docs/mcp/: resources-and-tools.md
docs/superpowers/plans/: 2026-07-08-geoserver-mcp-light-engineering.md  2026-07-09-pypi-package-name.md
docs/superpowers/specs/: 2026-07-08-geoserver-mcp-light-engineering-design.md  2026-07-09-pypi-package-name-design.md
examples/: client.py
src/geoserver_mcp/: __init__.py  client.py  connection.py  main.py  resources.py  server.py  utils.py
src/geoserver_mcp/adapters/: __init__.py  rest.py
src/geoserver_mcp/tools/: __init__.py  catalog.py  security.py  styles.py  system.py
tests/: test_catalog_tools.py  test_client.py  test_client_extended.py  test_connection.py  test_connection_extended.py  test_example_client.py  test_main_extended.py  test_main_remote.py  test_package_version.py  test_quality_gate_config.py  test_resources.py  test_resources_extended.py  test_security_tools.py  test_style_tools.py  test_system_tools.py  test_tool_contracts.py
