[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "open-geoserver-mcp"
version = "1.0.2"
description = "A GeoServer MCP server implementation that enhances LLM capabilities with geospatial data and mapping services via GeoServer REST API"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
authors = [
    {name = "Mahdi Nazari Ashani"},
    {name = "GeoServer MCP Contributors"},
]
keywords = ["mcp", "geoserver", "llm", "geospatial", "ogc", "wfs", "wms"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "mcp==1.28.1",
    "geoserver-rest==2.10.0",
    "seaborn",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.11,<2",
    "pytest>=8,<10",
    "pytest-cov>=5,<7",
    "ruff>=0.6,<1",
]

[project.scripts]
geoserver-mcp = "geoserver_mcp.main:main"

[project.urls]
Homepage = "https://github.com/openlang-cn/geoserver-mcp"
Repository = "https://github.com/openlang-cn/geoserver-mcp"
Issues = "https://github.com/openlang-cn/geoserver-mcp/issues"
Changelog = "https://github.com/openlang-cn/geoserver-mcp/blob/main/CHANGELOG.md"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/geoserver_mcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 100
extend-exclude = ["dist", "docs"]

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.mypy]
python_version = "3.10"
files = ["src/geoserver_mcp"]
mypy_path = "src"
explicit_package_bases = true
ignore_missing_imports = true
warn_unused_ignores = true
show_error_codes = true
