# ============================================================
# GeoServer MCP — pyproject.toml
# ============================================================

# ---------- 构建系统 ----------
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# ---------- 项目元数据 ----------
[project]
name = "open-geoserver-mcp"
version = "1.0.8"
description = "A GeoServer MCP server implementation that enhances LLM capabilities with geospatial data and mapping services via GeoServer REST API"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
authors = [
    {name = "Mahdi Nazari Ashani"},
    {name = "GeoServer MCP Contributors"},
]
keywords = ["mcp", "geoserver", "llm", "geospatial", "ogc", "wfs", "wms"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

# 运行时依赖（精确版本保证可重复构建；升级时需同步更新 CHANGELOG.md）
dependencies = [
    "mcp==1.28.1",
    "geoserver-rest==2.10.0",
    "seaborn>=0.13,<1",
]

# 开发/测试可选依赖
[project.optional-dependencies]
dev = [
    "mypy>=2,<3",
    "pytest>=8,<10",
    "pytest-cov>=7,<8",
    "ruff>=0.15,<1",
]

# CLI 入口
[project.scripts]
geoserver-mcp = "geoserver_mcp.main:main"

# 项目链接
[project.urls]
Homepage = "https://github.com/openlang-cn/geoserver-mcp"
Repository = "https://github.com/openlang-cn/geoserver-mcp"
Issues = "https://github.com/openlang-cn/geoserver-mcp/issues"
Changelog = "https://github.com/openlang-cn/geoserver-mcp/blob/main/CHANGELOG.md"

# ---------- Hatch 构建配置 ----------
[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.sdist]
force-include = {"src/geoserver_mcp" = "src/geoserver_mcp"}

[tool.hatch.build.targets.wheel]
force-include = {"src/geoserver_mcp" = "geoserver_mcp"}

# ---------- pytest 配置 ----------
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["-ra", "-q", "--strict-markers"]  # 显示所有失败原因 + 安静模式 + 严格标记

# ---------- Ruff 代码检查 & 格式化 ----------
[tool.ruff]
target-version = "py310"
line-length = 100
extend-exclude = ["dist", "docs"]

# 中文全角标点（RUF001/RUF002/RUF003）在中文项目中是合法写法，不视为问题
[tool.ruff.lint.per-file-ignores]
"*.py" = ["RUF001", "RUF002", "RUF003"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle: 代码风格错误
    "F",   # pyflakes: 逻辑错误检测
    "I",   # isort: import 排序
    "UP",  # pyupgrade: 现代 Python 语法升级提示
    "B",   # flake8-bugbear: 常见 bug 检测
    "C4",  # flake8-comprehensions: 推导式最佳实践
    "SIM", # flake8-simplify: 简化表达式建议
    "RUF", # ruff 内置规则
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false

# ---------- 覆盖率配置 ----------
[tool.coverage.run]
source = ["src/geoserver_mcp"]
omit = ["tests/*"]

[tool.coverage.report]
exclude_also = [
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

# ---------- MyPy 类型检查 ----------
[tool.mypy]
python_version = "3.10"
files = ["src/geoserver_mcp"]
mypy_path = "src"
explicit_package_bases = true
ignore_missing_imports = true
warn_unused_ignores = true
show_error_codes = true
